; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/mm/extr_hash_native_64.c_native_lock_hpte.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/mm/extr_hash_native_64.c_native_lock_hpte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hash_pte = type { i64 }

@HPTE_LOCK_BIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hash_pte*)* @native_lock_hpte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @native_lock_hpte(%struct.hash_pte* %0) #0 {
  %2 = alloca %struct.hash_pte*, align 8
  %3 = alloca i64*, align 8
  store %struct.hash_pte* %0, %struct.hash_pte** %2, align 8
  %4 = load %struct.hash_pte*, %struct.hash_pte** %2, align 8
  %5 = getelementptr inbounds %struct.hash_pte, %struct.hash_pte* %4, i32 0, i32 0
  store i64* %5, i64** %3, align 8
  br label %6

6:                                                ; preds = %1, %20
  %7 = load i32, i32* @HPTE_LOCK_BIT, align 4
  %8 = load i64*, i64** %3, align 8
  %9 = call i32 @test_and_set_bit(i32 %7, i64* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %6
  br label %21

12:                                               ; preds = %6
  br label %13

13:                                               ; preds = %18, %12
  %14 = load i32, i32* @HPTE_LOCK_BIT, align 4
  %15 = load i64*, i64** %3, align 8
  %16 = call i64 @test_bit(i32 %14, i64* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %13
  %19 = call i32 (...) @cpu_relax()
  br label %13

20:                                               ; preds = %13
  br label %6

21:                                               ; preds = %11
  ret void
}

declare dso_local i32 @test_and_set_bit(i32, i64*) #1

declare dso_local i64 @test_bit(i32, i64*) #1

declare dso_local i32 @cpu_relax(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
